--- a/index-1.html
+++ b/index-1.html
@@ -36,7 +36,7 @@
                 <div>
             <p>Create Profile</p></a>
             <p>Create Profile</p></a>
-                    <button class="sign-button"><a href="http://127.0.0.1:3002/html/index-2.html">Sign In</a></button>
+                    <button class="sign-button"><a href="http://127.0.0.1:3002/index-2.html">Sign In</a></button>
                 </div>
                 <div class="flex">
                     <div>
