--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <form class="email">
                 <input type="email" placeholder="Email address">
-                <button><a href="http://127.0.0.1:3002/html/index-1.html">Get Started</a></button>
+                <button><a href="http://127.0.0.1:3002/index-1.html">Get Started</a></button>
             </form>
         </div>
     </div>
